...
                                .toLocalDate()
                            val formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd")
                            onValueChange(selectedDate.format(formatter))
                        }
                    }
                ) {
                    Text("OK")
                }
            },
                dismissButton = {
                    TextButton(onClick = { showDialog = false }) {
                        Text("Batal")
                    }
...
