...
                        thickness = 1.dp
                    )
                }


                AppButton(
                    text = "Register",
                    variant = AppButtonVariant.Secondary,
                    onClick = onRegisterClick
                )
            }
        }
    }
...
